# geoguard-ledger

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  contract-test.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07c7da391fc0_initial_datasets_table.py
backend/app/: config.py  main.py
backend/app/api/v1/: datasets.py  health.py  verify.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: dataset.py  schemas.py
backend/app/services/: anomaly.py  hasher.py  parser.py  soroban.py  storage.py
backend/tests/: conftest.py  e2e_full_api.py  e2e_submission_flow.py  test_datasets.py  test_full_api.py  test_parser.py  test_submission_flow.py  test_verify.py
backend/tests/fixtures/: __init__.py  sample.csv
contracts/: README.md
contracts/geoguard-ledger/: Cargo.toml  Makefile
contracts/geoguard-ledger/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/geoguard-ledger/test_snapshots/test/tests/: test_anchor_and_verify.1.json  test_extend_ttl.1.json  test_initialize_twice.1.json  test_no_double_anchor.1.json  test_record_count.1.json  test_transfer_admin.1.json
docs/: ai_model.md  api_reference.md  architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/api/: client.ts  datasets.ts  verify.ts
scripts/: deploy_contract.sh  seed_db.py  setup_dev.sh
(+28 files in other folders)
